--- a/The_Process_arabic.html
+++ b/The_Process_arabic.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Video Page</title>
+    <title>The_Process_arabic</title>
     <style>
         /* General styles */
         body {
