--- a/The_Process_arabic.html
+++ b/The_Process_arabic.html
@@ -700,11 +700,31 @@
 <div id="video35" class="video-container hidden">
           <h1 class="video-title">حل امتحان 2021 دور تاني </h1>
                     <h1 class="video-title">part.1 </h1>
-<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://drive.google.com/file/d/1sjAO_TkzFukJ7m8aPC1nEx2oQZMQZVDW/preview" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
+<iframe 
+    src="https://drive.google.com/file/d/1sjAO_TkzFukJ7m8aPC1nEx2oQZMQZVDW/preview" 
+    width="640" 
+    height="480" 
+    allow="autoplay" 
+    allowfullscreen>
+</iframe></div>
+
           <h1 class="video-title">part.2 </h1>
-<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://drive.google.com/file/d/1rP_2Pl7qRKAPGxWL3euAGUskR4DdUnFh/preview" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe></div>
+<iframe 
+    src="https://drive.google.com/file/d/1rP_2Pl7qRKAPGxWL3euAGUskR4DdUnFh/preview" 
+    width="640" 
+    height="480" 
+    allow="autoplay" 
+    allowfullscreen>
+</iframe></div>
+
           <h1 class="video-title">part.3 </h1>
-<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://drive.google.com/file/d/1v8WKuw0ftiPaUjKiCMZOy3CgA3j7ZDJC/preview" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe>
+<iframe 
+    src="https://drive.google.com/file/d/1v8WKuw0ftiPaUjKiCMZOy3CgA3j7ZDJC/preview" 
+    width="640" 
+    height="480" 
+    allow="autoplay" 
+    allowfullscreen>
+</iframe>
 </div>
 </div>
 
